--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.Rmd linguist-detectable=R
+*.Rmd linguist-detectable=false
 *.R linguist-detectable=true
-*.html linguist-detectable=true
+*.html linguist-detectable=false
